<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical"
    tools:context=".ui.fragments.PillsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/dark_green"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/img_green_pill"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/pill_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_taken_pills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/taken"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_green_pill"
            app:layout_constraintStart_toEndOf="@+id/img_green_pill"
            app:layout_constraintTop_toTopOf="@id/img_green_pill" />

        <ImageView
            android:id="@+id/img_red_pill"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/pill_red"
            app:layout_constraintStart_toEndOf="@id/tv_taken_pills"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_missed_pills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/missed"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_red_pill"
            app:layout_constraintStart_toEndOf="@+id/img_red_pill"
            app:layout_constraintTop_toTopOf="@+id/img_red_pill" />

        <ImageView
            android:id="@+id/img_yellow_pill"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/pill_yellow"
            app:layout_constraintEnd_toStartOf="@id/tv_late_pills"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_late_pills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/late"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_yellow_pill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_yellow_pill" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/period"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="10.08.2024" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/dash"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="17.08.2024" />

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pills"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_pill" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/dark_green"
            android:textSize="24sp"
            app:cornerRadius="100dp"
            android:layout_margin="30dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>